log
Wed, Mar 19, 2025  9:00:47 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  9:07:44 AM: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  1|4
total_score: 10/70
35b9569
Wed, Mar 19, 2025  9:16:45 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
8bf8dc3
Wed, Mar 19, 2025  9:22:51 AM: 
 exercises.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  0|0
4f24088
Wed, Mar 19, 2025  9:24:26 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:68:8: error: unused variable 'contador' [-Werror=unused-variable]
    int contador = get_size(L);
        ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
6243b7f
Wed, Mar 19, 2025  9:25:29 AM: 
 exercises.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
2a0ac59
sá., 22 de mar. de 2025 14:07:32: 
 tests:  2|3
total_score: 20/70
ec759f0
sá., 22 de mar. de 2025 15:07:53: 
 tests:  2|3
total_score: 20/70
1a8f0df
sá., 22 de mar. de 2025 15:12:50: 
 exercises.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|0
9e7304c
sá., 22 de mar. de 2025 15:31:13: 
 exercises.c | 13 -------------
 1 file changed, 13 deletions(-)
 tests:  2|3
total_score: 20/70
3648617
sá., 22 de mar. de 2025 15:42:14: 
 exercises.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  2|3
total_score: 20/70
2330f3a
sá., 22 de mar. de 2025 15:43:39: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  3|2
total_score: 40/70
f47ed2d
sá., 22 de mar. de 2025 16:01:11: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
1e490dd
sá., 22 de mar. de 2025 16:25:37: 
 exercises.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:117:18: error: comparison between pointer and integer [-Werror]
    while(top(P1) != -1)
                  ^~
exercises.c:124:23: error: comparison between pointer and integer [-Werror]
    while(top(pilaAux) != -1)
                       ^~
cc1.exe: all warnings being treated as errors
Compilation failed
4054ba6
